修复构建错误: 移除已弃用的 AAPT2 选项
- 移除 android.enableAapt2=false（已弃用，AAPT2 现在强制使用）
- 移除 android.enableAapt2jni=false（不再需要）
- 保留必要的构建配置

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 
-# 禁用AAPT2守护进程，使用单次调用模式
-android.enableAapt2jni=false
+# 构建配置
 android.injected.build.abi=arm64-v8a
-
-# 使用旧版AAPT
-android.enableAapt2=false
