优化 GitHub Actions 构建配置
- 添加 Gradle 缓存以加速构建
- 添加 Gradle wrapper 验证
- 移除 clean 步骤（不必要）
- 添加 --stacktrace 参数以显示详细错误信息
- 添加 --no-daemon 参数以节省 CI 资源
- 改进 artifact 上传配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: 'gradle'
     
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
@@ -27,20 +28,31 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
-    - name: Clean project
-      run: ./gradlew clean
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v2
+    
+    - name: Cache Gradle packages
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug --stacktrace --no-daemon
     
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug-apk
         path: app/build/outputs/apk/debug/app-debug.apk
+        if-no-files-found: error
         
-    - name: Build Release APK
-      run: ./gradlew assembleRelease
+    - name: Build Release APK (unsigned)
+      run: ./gradlew assembleRelease --stacktrace --no-daemon
       continue-on-error: true
     
     - name: Upload Release APK
@@ -48,4 +60,5 @@ jobs:
       if: success()
       with:
         name: app-release-apk
-        path: app/build/outputs/apk/release/app-release.apk
+        path: app/build/outputs/apk/release/*.apk
+        if-no-files-found: warn
